--- a/BhartiyaTempleApp/AndroidManifest.xml
+++ b/BhartiyaTempleApp/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bhartiyaTemple.bhartiyatempleapp"
+<manifest package="com.bhartiyaTemple.bhartiyatempleapp"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -14,14 +13,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bhartiyaTemple.bhartiyatempleapp.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.bhartiyaTemple.bhartiyatempleapp.SplashScreen"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:label="@string/title_activity_splash_screen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.bhartiyaTemple.bhartiyatempleapp.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
-
 </manifest>
+
+
