--- a/BhartiyaTempleApp/.project
+++ b/BhartiyaTempleApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BhartiyaTempleApp</name>
+	<name>BharatiyaTemple</name>
 	<comment></comment>
 	<projects>
 	</projects>
