--- a/BhartiyaTempleApp/AndroidManifest.xml
+++ b/BhartiyaTempleApp/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.bhartiyaTemple.bhartiyatempleapp"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.bharatiyatemple"
     android:versionCode="1"
-    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -13,9 +14,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bhartiyaTemple.bhartiyatempleapp.SplashScreen"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-            android:label="@string/title_activity_splash_screen" >
+            android:name="com.bharatiyatemple.SplashScreen"
+            android:label="@string/title_activity_splash_screen"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,10 +24,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.bhartiyaTemple.bhartiyatempleapp.MainActivity"
+            android:name="com.bharatiyatemple.MainActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.bharatiyatemple.DisplayNameActivity"
+            android:label="@string/title_activity_display_name"
+            android:parentActivityName="com.bharatiyatemple.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bharatiyatemple.MainActivity" />
+        </activity>
     </application>
+
 </manifest>
-
-
