--- a/BhartiyaTempleApp/bin/AndroidManifest.xml
+++ b/BhartiyaTempleApp/bin/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.bharatiyatemple.SplashScreen"
-            android:label="@string/title_activity_splash_screen"
+            android:label="@string/app_name"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,6 +34,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bharatiyatemple.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.bharatiyatemple.UpdateDatabaseMainActivity"
+            android:label="@string/title_activity_update_database" >
+        </activity>
+        <activity
+            android:name="com.bharatiyatemple.UpdateDatabaseDelegateActivity"
+            android:label="@string/title_activity_update_database_delegate" >
         </activity>
     </application>
 
