--- a/BhartiyaTempleApp/AndroidManifest.xml
+++ b/BhartiyaTempleApp/AndroidManifest.xml
@@ -5,35 +5,30 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.bharatiyatemple.SplashScreen"
-            android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+               <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.bharatiyatemple.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.bharatiyatemple.MainActivity">
         </activity>
         <activity
             android:name="com.bharatiyatemple.DisplayNameActivity"
-            android:label="@string/title_activity_display_name"
-            android:parentActivityName="com.bharatiyatemple.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.bharatiyatemple.MainActivity" />
+            android:label="@string/descHome"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >           
+             
         </activity>
         <activity
             android:name="com.bharatiyatemple.UpdateDatabaseMainActivity"
